# rmig

./: Cargo.toml  LICENSE  README.MD
.docker/: README.MD  docker-compose.yml
.docker/oracle/: build.bat  build.sh
.github/: dependabot.yml
.github/workflows/: rmig-build-and-test.yml  rust-ubuntu.yml
assets/: changelog-schema.json
examples/: changelog.yml
examples/init/: 1.init.sql
examples/init/1.sub_init/: 2.query_with_global_options.sql
examples/init/2.another_sub_init/: 1.goodbye_world.sql
examples/init/2.another_sub_init/0.update/: 0.her.sql
rmig-core/: Cargo.toml  README.MD
rmig-core/benches/: tera.rs
rmig-core/src/: changelogs.rs  cli.rs  cli.yml  configuration_properties.rs  error.rs  lib.rs  tera_manager.rs  test_utils.rs
rmig-core/src/driver/: mod.rs  mysql.rs  oracle.rs  postgres.rs
rmig-core/src/init/: ora_init.sql  pg_init.sql
rmig-core/src/utils/: macro_utils.rs  mod.rs
src/: app.yml  changelogs.rs  cli.rs  cli.yml  configuration_properties.rs  error.rs  main.rs  tera_manager.rs
src/driver/: macro_utils.rs  mod.rs  oracle.rs  postgres.rs
src/examples/: changelog.yml  changelog_with_env.yml
src/examples/init/: 2.init_with_opts.sql
src/examples/init/1.sub_init/: 1.hello_world.sql  2.query_with_global_options.sql
src/examples/init/2.another_sub_init/: 2.reset.sql
src/init/: pg_init.sql
src/utils/: macro_utils.rs
test-integartion/: Cargo.toml
test-integartion/src/: lib.rs
