[package]
name = "rmig"
version = "1.0.0"
authors = ["SinmoWay"]
edition = "2018"
license = "MIT"
keywords = ["migration", "database", "cli"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[workspace]
members = ["rmig-core", "test-integartion"]

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1.0.40"

[dependencies.rmig-core]
path = "rmig-core"

[features]
default = ["postgres", "ora", "mysql"]
ora = []
postgres = []
mysql = []