[package]
name = "rmig-core"
version = "0.1.0"
authors = ["sinmoway <sinmoway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.4"
grcov = "0.8.0"

[[bench]]
name = "tera"
harness = false

[dependencies]
async-trait = "0.1.42"
futures = "0.3.13"

serde_yaml = "0.9.2"
serde_json = "1.0.61"
serde = { version = "1.0.120", features = ["default", "derive"] }

thiserror = "1.0"
anyhow = "1.0.40"
# Pattern path
glob = "0.3.0"
# Hash generator
md5 = "0.7.0"
crc32fast = "1.2.1"

# Template engine
tera = "1.7.0"

url = "2.2.1"

r2d2-oracle = "0.5.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml", "color"]

[dependencies.log]
version = "0.4.14"

[dependencies.log4rs]
version = "1.0.0"

[dependencies.sqlx]
version = "0.5.1"
features = ["runtime-async-std-native-tls", "default", "postgres", "chrono", "uuid"]

[features]
default = ["postgres", "ora", "mysql"]
ora = []
postgres = []
mysql = []
